ingress/service/traefik/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`worker2.innerinfo.net`)
    kind: Rule
    services:
    - name: food-svc
      port: 80
